# advent-of-code

./: .gitignore  Cargo.toml  README.md  go.mod
2022/python/: day-01.py
2025/: day_1.jai  day_2.jai  day_3.jai  day_4.jai  day_5.jai  day_6.jai  day_7.jai  day_8.jai  day_9.jai  main.jai
cmd/2022/: main.go
pkg/2022/day01/: calorie-counting.go  calorie_counting.go  calorie_counting_test.go  input.go
pkg/2022/day02/: input.go  rock-paper-scissors.go  rock_paper_scissors.go  rock_paper_scissors_test.go
pkg/2022/day03/: input.go  rucksack-reorganization.go  rucksack_reorganization.go  rucksack_reorganization_test.go
pkg/2022/day04/: camp-cleanup.go  camp_cleanup.go  camp_cleanup_test.go  input.go
pkg/2022/day05/: input.go  supply-stacks.go  supply_stacks.go  supply_stacks_test.go
pkg/2022/day06/: input.go  tuning-trouble.go  tuning_trouble.go  tuning_trouble_test.go
src/: input.zig  lib.rs  main.rs  main.zig
src/days/: day1.zig  day2.zig  day3.zig  day4.zig  day5.zig  template.zig
